--- a/css/tablas.css
+++ b/css/tablas.css
@@ -1,13 +1,39 @@
-td {
-	text-align: center;
-}
+	table, td {
+		text-align: center;
+		color: white;
+		
+	}
 
-th {
-	font-size: 18px;
-}
+	tr:hover {
+		background-color: white;
+	}
 
-.row {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-};
+	th {
+		font-size: 18px;
+		color: white;
+		background-color: #181B22;
+
+	}
+
+	.display-4 {
+		text-align: center;
+		font-weight: bold;
+	}
+
+
+
+	#btn{
+		display: flex;
+		justify-content: center;
+	}
+	.tabla {
+		display: flex;
+		justify-content: space-around;
+		align-items: center;
+		background-color: #ffffff10;
+		border: 0.5px solid #ffffff30;
+		backdrop-filter: blur(6px);
+		border-radius: 20px;
+	}
+
+	
