--- a/css/fondo.css
+++ b/css/fondo.css
@@ -21,7 +21,7 @@ body {
 
 
 body.enero {
-	background: linear-gradient(rgba(5, 7, 12, 0.40), rgba(5, 7, 12, 0.40)), url("../img/enero.png");
+	background: url("../img/enero.png");
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
