--- a/css/fondo.css
+++ b/css/fondo.css
@@ -26,22 +26,31 @@ body.enero {
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: cover;
+	background-color: #66999;
 }
 
 body.febrero {
-	background-image: url("../img/febrero.jpg");
+	background-image: linear-gradient(
+          rgba(0, 0, 0, 0), 
+          rgba(0, 0, 0, 0.4)
+        ), url("../img/febrero.jpg");
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: cover;
+	background-color: #66999;
 }
 
 body.marzo {
-	background-image: url("../img/marzo.jpg");
+	background-image: linear-gradient(
+          rgba(0, 0, 0, 0), 
+          rgba(0, 0, 0, 0.4)
+        ), url("../img/marzo.jpg");
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: cover;
+	background-color: #66999;
 }
 
 body.abril {
@@ -50,6 +59,7 @@ body.abril {
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: cover;
+	background-color: #66999;
 }
 
 body.mayo {
@@ -58,6 +68,7 @@ body.mayo {
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: cover;
+	background-color: #66999;
 }
 
 body.junio {
@@ -66,6 +77,7 @@ body.junio {
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: cover;
+	background-color: #66999;
 }
 
 body.julio {
@@ -74,6 +86,7 @@ body.julio {
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: cover;
+	background-color: #66999;
 }
 
 body.agosto {
@@ -82,6 +95,7 @@ body.agosto {
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: cover;
+	background-color: #66999;
 }
 
 body.septiembre {
@@ -90,6 +104,7 @@ body.septiembre {
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: cover;
+	background-color: #66999;
 }
 
 body.octubre {
@@ -98,6 +113,7 @@ body.octubre {
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: cover;
+	background-color: #66999;
 }
 
 body.noviembre {
@@ -106,6 +122,7 @@ body.noviembre {
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: cover;
+	background-color: #66999;
 }
 
 body.diciembre {
@@ -114,4 +131,5 @@ body.diciembre {
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: cover;
+	background-color: #66999;
 }
