--- a/css/header.css
+++ b/css/header.css
@@ -7,8 +7,12 @@ nav {
     width: 150px;
   }
 
+  #inicio a {
+    color: white;
+  }
+
   a {
-     color: white;
+     color: #D9D9D9;
   }
 
   a:hover {
