--- a/css/header.css
+++ b/css/header.css
@@ -78,3 +78,14 @@ nav {
   .arrow .list__arrow {
     transform: rotate(90deg);
   }
+
+  .foto{
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    background-position: 50%; 
+    background-size: 100% auto;
+    background-repeat: no-repeat;
+    background-color: white;
+  
+  }
