--- a/css/perfil.css
+++ b/css/perfil.css
@@ -1,9 +1,62 @@
 #DatosUsuario {
-	font-size: 25px;
+	font-size: 20px;
+	width: 100%;
+	display: flex;
+	float: none;
+	margin: 0 auto;
+	
 }
 
-.col-sm-12 {
-	background: yellow;
-	align-content: center;
+h2 {
+	text-align: center;
+	border-bottom: 2px solid black;
+}
+
+#datos {
+	width: 600px;
+	border: 5px solid black;
+	border-radius: 10px;
+	background: white;
+}
+
+form {
+	width: 100%;
+}
+
+/*
+input[type=file]{
+	width: 200px;
+	height: 200px;
+	float: none;
+	margin: 0 auto;
+	text-align: center;
+	border-radius: 100%;
+	
+}
+*/
+
+.image-upload {
 	display: flex;
+	justify-content: center;
+	
+}
+
+.image-upload > input {
+	display: none;
+}
+
+.image-upload img{
+	width: 200px;
+	cursor: pointer;
+	border: 1px solid black;
+	border-radius: 100%;
+}
+
+.image-upload img:hover {
+	opacity: 0.8;
+	transition-delay: 0.1s;
+}
+
+#instruccion {
+	 text-align: center;
 }
