--- a/css/header.css
+++ b/css/header.css
@@ -1,5 +1,5 @@
 nav {
-  border-bottom: 0.5px solid #E92909;
+  border-bottom: 0.5px solid #757575;
   border-radius: 0px 0px 5px 5px;
 }
 
@@ -56,7 +56,7 @@ nav {
     height: 0;
     position: absolute;
     display: block;
-    background-color: #CE2408;
+    background-color: #151515;
     overflow: hidden;
   }
 
