--- a/css/header.css
+++ b/css/header.css
@@ -26,6 +26,7 @@ nav {
 
   .nav__link {
     padding: 15px 0;
+    width: 90px;
     text-decoration: none;
   }
 
@@ -71,6 +72,7 @@ nav {
 
   .list__arrow {
     transition: transform .3s;
+
   }
 
   /* cuando el elemento list__button--click tenga la clase arrow,
