--- a/css/header.css
+++ b/css/header.css
@@ -44,6 +44,7 @@ nav {
 
   .list__item {
     overflow: hidden;
+
   }
 
   .list__item--click {
@@ -90,4 +91,9 @@ nav {
     background-repeat: no-repeat;
     background-color: white;
   
+  }
+
+
+  #F {
+    margin-left: 20px;
   }
