--- a/vistas/bibliotecario/css_l/hoja_index_bibliotecario.css
+++ b/vistas/bibliotecario/css_l/hoja_index_bibliotecario.css
@@ -1,13 +1,12 @@
-nav{
-	margin: 0px;
-	padding: 0px;
-}
+
 
 body{
-	margin-bottom: 20px;
-	background-image: url('../img_l/bimg2.jpg');
-	background-size: 100vw 100vh;
+	background-image: url('../img_l/libros.jpg');
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: cover;
 	background-attachment: fixed;
+
 }
 
 
@@ -53,7 +52,7 @@ body{
 #banner{
 	border: 1px solid #fff;
 	padding: 5px;
-	background:  #0C89AD;
+	background: #151515;
 	text-align: center;
 }
 
@@ -61,11 +60,10 @@ body{
 #navbar{
 	border: 1px solid #fff;
 	text-align: center;
-	font-weight: bold;
 	font-size: 17px;
-	height: 40px;
+	height: 90px;
 	
-	background:  #0C89AD;
+	background:  #151515;
 }
 
 ul, ol{
@@ -78,18 +76,16 @@ ul, ol{
 }
 
 #menu li a{
-	background-color: #0C89AD;
-	color: #fff;
+	background-color: #151515;
+	color: #D9D9D9;
 	text-decoration: none;
-	
 	padding: 0px 15px;
 	line-height: 40px;
-
+	width: 80%;
 }
 
 #menu li ul li{
 	z-index: 2;
-
 	background-color: #0C89AD;
 	color: #fff;
 	text-decoration: none;
@@ -98,9 +94,8 @@ ul, ol{
 
 #menu li a:hover {
 	cursor: pointer;
-	font-size: 18px;
-	color: #56E253;
-	text-decoration: underline;
+	color: white;
+	text-decoration: none;
 }
 
 #menu li ul li a:hover{
@@ -114,12 +109,12 @@ ul, ol{
 
 #menu > li{
 	float: left;
-
 }
 
 #menu li ul{
 	display: none;
 	position: absolute;
+
 }
 
 #menu li:hover > ul{
