--- a/vistas/bibliotecario/css_l/hoja_librosPrestados.css
+++ b/vistas/bibliotecario/css_l/hoja_librosPrestados.css
@@ -35,7 +35,7 @@ body{
 
 #tablaLP h1{
 	text-align: center;
-	background-color: #0C89AD;
+	background-color: #FC3F04;
 	color: #fff;
 	padding: 4px;
 	box-sizing: border-box;
@@ -48,7 +48,7 @@ body{
 
 	padding: 0.5%;
 	box-sizing: border-box;
-	background-color: #C6F1F7;
+	background-color: #FFC44F;
 	text-align: right;
 
 }
@@ -61,9 +61,30 @@ body{
 }
 
 #busqueda input{
-	padding: 7px;
+
+
 	box-sizing: border-box;
 	border-radius: 5px;
+	
+   
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+
+#busqueda input:focus {
+	color:#495057;
+	background-color:#fff;
+	border-color:#80bdff;
+	outline:0;
+	box-shadow:0 0 0 .2rem rgba(0,123,255,.25);
 }
 
 #ListaLP{
