Estilos vista Libros Devueltos

--- a/vistas/bibliotecario/css_l/retornados.css
+++ b/vistas/bibliotecario/css_l/retornados.css
@@ -15,7 +15,7 @@ body{
 
 #tablaLR h1{
 	text-align: center;
-	background-color: #0C89AD;
+	background-color: #FC3F04;
 	color: #fff;
 	padding: 4px;
 	box-sizing: border-box;
@@ -28,7 +28,7 @@ body{
 
 	padding: 1%;
 	box-sizing: border-box;
-	background-color: #C6F1F7;
+	background-color: #FFC44F;
 
 	text-align: right;
 
@@ -48,9 +48,27 @@ body{
 }*/
 
 #BusquedaLR input{
-	padding: 7px;
 	box-sizing: border-box;
 	border-radius: 5px;
+	
+   
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+#BusquedaLR input:focus {
+	color:#495057;
+	background-color: #fff;
+	border-color: #80bdff;
+	outline: 0;
+	box-shadow: 0 0 0 .2rem rgba(0, 123, 255, .25);
 }
 
 #BusquedaLR > button, #ImprimirLR > button{
