--- a/vistas/bibliotecario/css_l/hoja_DetAutor.css
+++ b/vistas/bibliotecario/css_l/hoja_DetAutor.css
@@ -13,41 +13,47 @@
 	border-radius: 10px;
 	padding: 2%;
 	box-sizing: border-box;
-	background-color: #C6F1F7;
+	background-color: white;
 	overflow: hidden;
 }
 
-#cajaMayor > h1{
+#cajaMayor > h2{
 
-	font-size: 15pt;
+	
 	text-align: center;
 	padding: 10px;
 	box-sizing: border-box;
 	margin-bottom: 5%;
-	background: #264773;
+	background: #FC3F04;
 	color: #fff;
 }
 
 #caja1{
-
+	border: 1px solid black;
 	width: 48%;
-	height: 280px;
-	
+	height: 290px;
+	text-align: center;
 	float: left;
 	padding: 1%;
 	box-sizing: border-box;
-	background-color: #264773;
+	background-color: #FC3F04;
 	border-radius: 5px;
 	margin-bottom: 10px;
 }
 
+
+#caja1 legend{
+	
+	color: #fff;
+}
+
 #caja2{
 	width: 50%;
-	
+	border: 1px solid black;
 	float: right;
 	padding: 1%;
 	box-sizing: border-box;
-	background-color: #264773;
+	background-color: #FFC44F;
 	border-radius: 5px;
 	margin-bottom: 10px;
 
@@ -68,15 +74,33 @@
 }
 
 
-#agregarAutor input, #agregarAutor button{
+#agregarAutor input, #agregarAutor span{
 	width: 100%;
 	margin: 4px 0px 4px 0px;
-	padding: 5px;
+	
 	box-sizing: border-box;
+
+	padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #495057;
+  
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 
-#agregarAutor button{
-	background-color: #1589D3;
+#agregarAutor input:focus{
+	color:#495057;
+	background-color:#fff;
+	border-color:#80bdff;
+	outline:0;
+	box-shadow:0 0 0 .2rem rgba(0,123,255,.25);
+}
+
+#agregarAutor span{
+	border: none;
 	color: #fff;
 	border-radius: 5px;
 }
@@ -103,13 +127,32 @@
 	box-sizing: border-box;
 
 
+
+	padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+
+}
+
+
+#FormModificarAutor input:focus{
+	color:#495057;
+	background-color:#fff;
+	border-color:#80bdff;
+	outline:0;
+	box-shadow:0 0 0 .2rem rgba(0,123,255,.25);
 }
 
 
 
-#modificarAutor button{
+#modificarAutor span{
 	width: 100%;
-	background-color: #1589D3;
 	color: #fff;
 	border-radius: 5px;
 	margin: 4px 0px 4px 0px;
@@ -134,15 +177,33 @@
 }
 
 
-#EliminarAutor input, #EliminarAutor button{
+#EliminarAutor input, #EliminarAutor span{
 	width: 100%;
 	margin: 4px 0px 4px 0px;
 	padding: 5px;
 	box-sizing: border-box;
+
+	padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #495057;
+  
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 
-#EliminarAutor button{
-	background-color: #1589D3;
+#EliminarAutor input:focus {
+	color:#495057;
+	background-color:#fff;
+	border-color:#80bdff;
+	outline:0;
+	box-shadow:0 0 0 .2rem rgba(0,123,255,.25);
+}
+
+#EliminarAutor span{
+	border: none;
 	color: #fff;
 	border-radius: 5px;
 
@@ -173,10 +234,9 @@
 	text-align: center;
 }
 
-#Regreso  button{
+#Regreso  span{
 	
 	width: 50%;
-	background-color: #1589D3;
 	color: #fff;
 	border-radius: 5px;
 	border:none;
