--- a/vistas/bibliotecario/css_l/hoja_DetEditorial.css
+++ b/vistas/bibliotecario/css_l/hoja_DetEditorial.css
@@ -15,41 +15,45 @@ body{
 	border-radius: 10px;
 	padding: 2%;
 	box-sizing: border-box;
-	background-color: #C6F1F7;
+	background-color: white;
 	overflow: hidden;
 }
 
-#cajaMayor > h1{
+#cajaMayor > h2{
 
-	font-size: 15pt;
 	text-align: center;
 	padding: 10px;
 	box-sizing: border-box;
 	margin-bottom: 5%;
-	background: #264773;
+	background: #FC3F04;
 	color: #fff;
 }
 
 #caja1{
-
+	border: 1px solid black;
 	width: 48%;
-	height: 280px;
+	height: 290px;
 	color: black;
 	float: left;
 	padding: 1%;
 	box-sizing: border-box;
-	background-color: #264773;
+	background-color: #FC3F04;
 	border-radius: 5px;
 	margin-bottom: 10px;
 }
 
+#caja1 legend{
+	text-align: center;
+	color: #fff;
+}
+
 #caja2{
 	width: 50%;
-	
+	border: 1px solid black;
 	float: right;
 	padding: 1%;
 	box-sizing: border-box;
-	background-color: #264773;
+	background-color: #FFC44F;
 	border-radius: 5px;
 	margin-bottom: 10px;
 
@@ -70,15 +74,33 @@ body{
 }
 
 
-#agregarEditorial input, #agregarEditorial button{
+#agregarEditorial input, #agregarEditorial span{
 	width: 100%;
 	margin: 4px 0px 4px 0px;
-	padding: 5px;
+	
 	box-sizing: border-box;
+
+	padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #495057;
+  
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 
-#agregarEditorial button{
-	background-color: #1589D3;
+#agregarEditorial input:focus{
+	color:#495057;
+	background-color:#fff;
+	border-color:#80bdff;
+	outline:0;
+	box-shadow:0 0 0 .2rem rgba(0,123,255,.25);
+}
+
+#agregarEditorial span{
+	border: none;
 	color: #fff;
 	border-radius: 5px;
 }
@@ -104,14 +126,31 @@ body{
 	padding: 4px;
 	box-sizing: border-box;
 
+	padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #495057;
+  
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 
 }
 
 
+#FormModificarEditorial input:focus {
+	color:#495057;
+	background-color:#fff;
+	border-color:#80bdff;
+	outline:0;
+	box-shadow:0 0 0 .2rem rgba(0,123,255,.25);
+}
 
-#modificarEditorial button{
+
+
+#modificarEditorial span{
 	width: 100%;
-	background-color: #1589D3;
 	color: #fff;
 	border-radius: 5px;
 	margin: 4px 0px 4px 0px;
@@ -136,15 +175,33 @@ body{
 }
 
 
-#EliminarEditorial input, #EliminarEditorial button{
+#EliminarEditorial input, #EliminarEditorial span{
 	width: 100%;
 	margin: 4px 0px 4px 0px;
 	padding: 5px;
 	box-sizing: border-box;
+
+	padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #495057;
+  
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 
-#EliminarEditorial button{
-	background-color: #1589D3;
+#EliminarEditorial input:focus {
+	color:#495057;
+	background-color:#fff;
+	border-color:#80bdff;
+	outline:0;
+	box-shadow:0 0 0 .2rem rgba(0,123,255,.25);
+}
+
+#EliminarEditorial span{
+	border: none;
 	color: #fff;
 	border-radius: 5px;
 
@@ -176,10 +233,10 @@ body{
 	text-align: center;
 }
 
-#Regreso  button{
+#Regreso  span{
 	
 	width: 50%;
-	background-color: #1589D3;
+	
 	color: #fff;
 	border-radius: 5px;
 	border:none;
