--- a/vistas/bibliotecario/css_l/hoja_EliLector.css
+++ b/vistas/bibliotecario/css_l/hoja_EliLector.css
@@ -38,10 +38,9 @@
 }
 
 
-#CajaMensaje button{
+#CajaMensaje span{
 	width: 40%;
 	border: none;
-	background-color: #1589D3;
 	color: #fff;
 	padding: 10px;
 	margin: 0% 4%;
