--- a/vistas/bibliotecario/css_l/hoja_NueLibro.css
+++ b/vistas/bibliotecario/css_l/hoja_NueLibro.css
@@ -3,11 +3,10 @@
  padding: 2%;
  box-sizing: border-box;
  color: #fff;
-
 }
 
 #formulario{
-	width: 40%;
+	width: 55%;
 	margin: auto;
 	border: 1px solid #fff;
 
@@ -15,13 +14,13 @@
 
 	border-radius: 10px;
 	overflow: hidden;
-	background-color: #C6F1F7;
+	background-color: white;
 }
 
-#formulario h1{
+#formulario h2{
 	padding: 3%;
 	box-sizing: border-box;
-	background-color: #0C89AD;
+	background-color: #FC3F04;
 	text-align: center;
 	
 }
@@ -48,28 +47,64 @@ form div label{
 form  div  input{
 	float: right;
 	font-size: 10pt;
-	padding: 5px;
+
 	box-sizing: border-box;
-	width: 65%;
+	width: 70%;
+	padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+
+form div input:focus{
+	color:#495057;
+	background-color:#fff;
+	border-color:#80bdff;
+	outline:0;
+	box-shadow:0 0 0 .2rem rgba(0,123,255,.25);
 }
 
 
 form  div  select{
 	float: right;
 	font-size: 10pt;
-	padding: 5px;
+	
 	box-sizing: border-box;
-	width: 65%;
+	width: 70%;
+	 padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+form div select:focus{
+	color:#495057;
+	background-color:#fff;
+	border-color:#80bdff;
+	outline:0;
+	box-shadow:0 0 0 .2rem rgba(0,123,255,.25);
 }
 
 
 #botones{
 	text-align: center;
+
 }
 
-form  button{
+form  span{
 	width: 40%;
-	margin: 2% 4% 0% 4%;
+	
 
 	border: none;
 	background-color: #1589D3;
@@ -77,7 +112,7 @@ form  button{
 	padding: 10px;
 	border-radius: 5px;
 
-	display: inline-block;
+	
 }
 
 form button:hover{
