--- a/css/tablas.css
+++ b/css/tablas.css
@@ -77,7 +77,8 @@
 
 
 	.btn-primary {
-		margin: 5px;
+		margin-left: 5px;
+		margin-right: 5px;
 		background-color: #FA5F00;
 		border: 1px #FA5F00;
 	}
