--- a/vistas/bibliotecario/css_l/header.css
+++ b/vistas/bibliotecario/css_l/header.css
@@ -4,8 +4,9 @@ nav {
 }
 
 .nav-item {
-    width: 150px;
+    width: 170px;
   }
+
 
   #inicio a {
     color: white;
@@ -91,10 +92,10 @@ nav {
     background-size: 100% auto;
     background-repeat: no-repeat;
     background-color: white;
-  
+    
   }
 
 
   #F {
-    margin-left: 20px;
+    margin: 20px;
   }
