--- a/css/header.css
+++ b/css/header.css
@@ -47,6 +47,7 @@
 
   .list__item {
     overflow: hidden;
+
   }
 
   .list__item--click {
@@ -55,6 +56,7 @@
 
 
   .list__show {
+     margin-left: 60px;
     list-style: none;
     transition: height .4s;
     height: 0;
@@ -63,6 +65,7 @@
     display: block;
     background-color: #151515;
     overflow: hidden;
+
   }
 
   .navbar-nav li:hover .list__show {
@@ -93,6 +96,7 @@
     background-size: 100% auto;
     background-repeat: no-repeat;
     background-color: white;
-    
-   
+    margin-left: 60px;
   }
+
+  
