navbar bibliotecario actualizado

--- a/vistas/bibliotecario/css_l/header.css
+++ b/vistas/bibliotecario/css_l/header.css
@@ -1,9 +1,14 @@
-nav {
+  nav {
   border-bottom: 0.5px solid #757575;
   border-radius: 0px 0px 5px 5px;
-}
+  }
 
-.nav-item {
+  .collapse {
+    margin-right: 30px;
+  }
+
+
+  .nav-item {
     width: 170px;
   }
 
