--- a/vistas/bibliotecario/css_l/hoja_index_bibliotecario.css
+++ b/vistas/bibliotecario/css_l/hoja_index_bibliotecario.css
@@ -18,7 +18,8 @@ body{
 	margin: auto;
 	
 	padding: 20px;
-	background: rgba(0,0,0,0.7);
+	background-color: rgba(0, 0, 0, 0.87);
+
 	border-radius: 10px;
 	box-shadow: 0px 0px 1px #fff;
 }
