--- a/css/tablas.css
+++ b/css/tablas.css
@@ -71,6 +71,7 @@
 		align-items: center;
 		background-color: #ffffff25;
 		border: 0.5px solid #ffffff35;
+		backdrop-filter: blur(10px);
 		border-radius: 20px;
 	}
 
