--- a/css/fondo.css
+++ b/css/fondo.css
@@ -1,30 +1,9 @@
-/*
-body {
-	background-image: url("../img/fondo.jpg");
-	 Para dejar la imagen centrada vertical y horizontalmente 
-	background-position: center center;
-	/* Para que no se repita 
-	background-repeat: no-repeat;
-	/* La imagen se fija en la ventana de visualización para que la altura 
-	de la imagen no supere a la del contenido
-	background-attachment: fixed;
-	/* La imagen de fondo se reescala automáticamente con el cambio 
-	del ancho de ventana del navegador
-	background-size: cover;
-	/* Se muestra color de fondo mientras se está cargando la imagen
-	de fondo o si hay problemas para cargarla 
-	background-color: #66999; 
-}
-*/
-
-
-
 
 body.enero {
 	background-image: linear-gradient(
           rgba(0, 0, 0, 0), 
           rgba(0, 0, 0, 0.4)
-        ), url("../img/enero.png");
+        ), url("../img/Enero.webp");
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
@@ -36,7 +15,7 @@ body.febrero {
 	background-image: linear-gradient(
           rgba(0, 0, 0, 0), 
           rgba(0, 0, 0, 0.4)
-        ), url("../img/febrero.jpg");
+        ), url("../img/Febrero.webp");
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
@@ -48,7 +27,7 @@ body.marzo {
 	background-image: linear-gradient(
           rgba(0, 0, 0, 0), 
           rgba(0, 0, 0, 0.4)
-        ), url("../img/marzo.jpg");
+        ), url("../img/Marzo.webp");
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
@@ -60,7 +39,7 @@ body.abril {
 	background-image: linear-gradient(
           rgba(0, 0, 0, 0), 
           rgba(0, 0, 0, 0.4)
-        ), url("../img/abril.png");
+        ), url("../img/Abril.webp");
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
@@ -72,7 +51,7 @@ body.mayo {
 	background-image: linear-gradient(
           rgba(0, 0, 0, 0), 
           rgba(0, 0, 0, 0.4)
-        ), url("../img/mayo.png");
+        ), url("../img/Mayo.webp");
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
@@ -84,7 +63,7 @@ body.junio {
 	background-image: linear-gradient(
           rgba(0, 0, 0, 0), 
           rgba(0, 0, 0, 0.4)
-        ), url("../img/junio.png");
+        ), url("../img/Junio.webp");
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
@@ -96,7 +75,7 @@ body.julio {
 	background-image: linear-gradient(
           rgba(0, 0, 0, 0), 
           rgba(0, 0, 0, 0.4)
-        ), url("../img/julioo.png");
+        ), url("../img/Julio.webp");
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
@@ -108,7 +87,7 @@ body.agosto {
 	background-image: linear-gradient(
           rgba(0, 0, 0, 0), 
           rgba(0, 0, 0, 0.4)
-        ), url("../img/agosto.jpg");
+        ), url("../img/Agosto.webp");
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
@@ -120,7 +99,7 @@ body.septiembre {
 	background-image: linear-gradient(
           rgba(0, 0, 0, 0), 
           rgba(0, 0, 0, 0.4)
-        ), url("../img/septiembre.png");
+        ), url("../img/Septiembre.webp");
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
@@ -132,7 +111,7 @@ body.octubre {
 	background-image: linear-gradient(
           rgba(0, 0, 0, 0), 
           rgba(0, 0, 0, 0.4)
-        ), url("../img/octubre.jpg");
+        ), url("../img/Octubre.webp");
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
@@ -144,7 +123,7 @@ body.noviembre {
 	background-image: linear-gradient(
           rgba(0, 0, 0, 0), 
           rgba(0, 0, 0, 0.4)
-        ), url("../img/noviembre.png");
+        ), url("../img/Noviembre.webp");
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
@@ -156,7 +135,7 @@ body.diciembre {
 	background-image: linear-gradient(
           rgba(0, 0, 0, 0), 
           rgba(0, 0, 0, 0.4)
-        ), url("../img/diciembre.png");
+        ), url("../img/Diciembre.webp");
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
