--- a/vistas/bibliotecario/css_l/hoja_index_bibliotecario.css
+++ b/vistas/bibliotecario/css_l/hoja_index_bibliotecario.css
@@ -1,7 +1,7 @@
 
 
 body{
-	background-image: url('../img_l/libros.jpg');
+	background-image: url('../img_l/libros.webp');
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
