Agregar sombreado a tablas compartidas

--- a/css/tablas_compartidas.css
+++ b/css/tablas_compartidas.css
@@ -70,8 +70,9 @@
 		align-items: center;
 		background-color: white;
 		border: 0.5px solid #ffffff60;
-		
 		border-radius: 20px;
+		 -webkit-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.9);
+  		box-shadow: 0 30px 60px 0 rgba(0,0,0,0.9);
 	}
 
 
